# final-major-project-2024

./: Declaration of Agreement.docx  GFA6015 Coversheet_Armin_Raad.docx  Product Description.txt  README.md
Original Project/source/: .clang-format  CMakeLists.txt  OUTLINE_1  vcpkg.json
Original Project/source/assets/client/tiled/: dungeon_prison.json  misc.json  tiledproject.tiled-session
Original Project/source/assets/client/tiled/maps/: starter_map.json
Original Project/source/buildable_version/: run.py
Original Project/source/buildable_version/assets/client/tiled/: tiledproject.tiled-session
Original Project/source/buildable_version/assets/client/tiled/maps/: starter_map.json
Original Project/source/buildable_version/src/client/: debug.h  followCamera.cpp  followCamera.h  gameloop.cpp  gameloop.h  layer.h  map.cpp  map.h  player.cpp  tile.cpp  tile.h  tileset.cpp  tileset.h
Original Project/source/buildable_version/src/server/: main.cpp
Original Project/source/src/client/: clientSocket.cpp  clock.cpp  clock.h  debug.cpp  gameloop.cpp  layer.cpp  main.cpp  map.cpp  map.h  player.h  tile.cpp  tile.h  tileset.cpp  tileset.h
Original Project/source/src/common/: defs.h
Second Project/Assets/Scenes/: SampleScene.unity  game.unity
Second Project/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF - Fallback.asset
Second Project/Assets/_graphics/animations/character/: Character.controller  huntress_idle.anim  huntress_run.anim
Second Project/Assets/_graphics/environment/: ground palette.prefab  ground_stone1.asset
Second Project/Assets/_prefabs/: Chunk.prefab  Enemy.prefab
Second Project/Assets/_src/: CameraController.cs  DebugText.cs  EnemyAI.cs  EnemySpawner.cs  HealthController.cs  MapGenerator.cs  Player.cs  PlayerCollisionController.cs  PlayerMovementController.cs
Second Project/Assets/_src/ScriptableObjects/: CharacterSO.cs  UISO.cs
Second Project/Assets/_src/ScriptableObjects/Character/: Enemy.asset  Player.asset
Second Project/Assets/input/: PlayerInputActions.inputactions
Second Project/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Second Project/UserSettings/: EditorUserSettings.asset
Second Project/UserSettings/Layouts/: default-2022.dwlt
(+2 files in other folders)
